--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Scan the QR code below to make a payment.</p>
         <img src="./assets/qr.jpg" alt="PhonePe QR Code">
         <p>For any queries, contact me on Telegram:</p>
-        <a class="btn" href="https://t.me/YourBotUsername" target="_blank">Chat on Telegram</a>
+        <a class="btn" href="https://t.me/Kamal_premium_bot" target="_blank">Chat on Telegram</a>
     </div>
 </body>
 </html>
